src/assets/scss/global.scss
/* Font */
@font-face {
    font-family: "Squartiqa";
    src: url("/fonts/Squartiqa4F.ttf");
}

@font-face {
    font-family: "Arial Black";
    src: url("/fonts/ArialBlack.ttf");
}

@font-face {
    font-family: "Arial Black Italic";
    src: url("/fonts/ArialBlackItalic.ttf");
}

@font-face {
    font-family: "Bitstream Vera Sans";
    src: url("/fonts/Vera.ttf");
}

@font-face {
    font-family: "Minecraft";
    src: url("/fonts/Minecraft.ttf");
}

/* CSS Reset */
html {
    box-sizing: border-box;
    font-size: 16px;
    width: 100%;
    height: 100%;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul,
a {
    margin: 0;
    padding: 0;
    font-weight: normal;
}

body,
#app {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

body {
    background-image: url('/img/sky-background.svg');
}

ol,
ul {
    list-style: none;
}

a {
    color: inherit;
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
}

button {
    border: none;
    margin: 0;
    padding: 0;
}

main {
    width: 100%;
    height: 100%;
}

/* Game Boy */
$game-boy-primary-color: #aaaea6;
$game-boy-secondary-color: #888a85;
$game-boy-screen-color: #73d216;
$game-boy-primary-title-color: #204a87;
$game-boy-secondary-title-color: #eeeeec;
$game-boy-primary-button-color: #5c3566;
$game-boy-secondary-button-color: #2e3436;
$game-boy-element-color: #555753;
$game-boy-battery-color: #ef2929;

$button-size: 50px;

